--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --watch",
+    "dev": "npx nodemon ./src/server.js",
+    "swagger": "node swagger.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +14,16 @@
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "jest": "^30.0.0",
+    "swagger-autogen": "^2.23.7"
   }
 }
